Add width restraints

--- a/betta-next.css
+++ b/betta-next.css
@@ -1903,7 +1903,7 @@ p.version {
   padding: 1rem;
   float: right;
   border: solid 1px;
-  border-color: #81786a;
+  border-color: rgb(129, 120, 106);
   border-radius: 1rem;
   word-wrap: break-word;
   background-color: #ff3737;
@@ -1925,8 +1925,43 @@ p.version {
   large screens
 ---------------------------------------*/
 @media (min-width: 1200px) {
+  .w-90 {
+    width: 90%;
+  }
+
   .w-80 {
     width: 80%;
+  }
+
+  .w-70 {
+    width: 70%;
+  }
+
+  .w-60 {
+    width: 60%;
+  }
+
+  .w-50 {
+    width: 50%;
+  }
+
+  .w-40 {
+    width: 40%;
+  }
+
+  .w-30 {
+    width: 30%;
+  }
+
+  .w-20 {
+    width: 20%;
+  }
+
+  .w-10 {
+    width: 10%;
+  }
+
+  .w-90, .w-80, .w-70, .w-60, .w-50, .w-40, .w-30, .w-20, .w-10 {
     margin: 0 auto;
   }
 }
