Add class for full width

--- a/betta-next.css
+++ b/betta-next.css
@@ -1925,6 +1925,10 @@ p.version {
   large screens
 ---------------------------------------*/
 @media (min-width: 1200px) {
+  .w-100 {
+    width: 100%;
+  }
+
   .w-90 {
     width: 90%;
   }
@@ -1961,7 +1965,7 @@ p.version {
     width: 10%;
   }
 
-  .w-90, .w-80, .w-70, .w-60, .w-50, .w-40, .w-30, .w-20, .w-10 {
+  .w-100, .w-90, .w-80, .w-70, .w-60, .w-50, .w-40, .w-30, .w-20, .w-10 {
     margin: 0 auto;
   }
 }
