--- a/base/_base.scss
+++ b/base/_base.scss
@@ -1587,6 +1587,10 @@ p.version {
   large screens
 ---------------------------------------*/
 @media (min-width: 1200px) {
+  .w-100 {
+    width: 100%;
+  }
+
   .w-90 {
     width: 90%;
   }
@@ -1623,7 +1627,7 @@ p.version {
     width: 10%;
   }
 
-  .w-90, .w-80, .w-70, .w-60, .w-50, .w-40, .w-30, .w-20, .w-10 {
+  .w-100, .w-90, .w-80, .w-70, .w-60, .w-50, .w-40, .w-30, .w-20, .w-10 {
     margin: 0 auto;
   }
 }
