Fix styling issues

--- a/base/_base.scss
+++ b/base/_base.scss
@@ -1698,3 +1698,17 @@ p.version {
 }
 
 /*-------------------------------------*/
+
+/*---------------------------------------
+	Video
+---------------------------------------*/
+.betta_video {
+  width: 100%;
+
+  video {
+    width: 100%;
+    height: auto;
+  }
+}
+
+/*-------------------------------------*/
