Add padding and margin removers

--- a/betta-next.css
+++ b/betta-next.css
@@ -1924,8 +1924,7 @@ p.version {
 
 /*-------------------------------------*/
 /*---------------------------------------
-	Size restraints for text sections on
-  large screens
+	Size restraints on large screens
 ---------------------------------------*/
 @media (min-width: 1200px) {
   .w-100 {
@@ -1973,6 +1972,46 @@ p.version {
     margin-right: auto;
   }
 }
+/*-------------------------------------*/
+/*---------------------------------------
+	Padding removers
+---------------------------------------*/
+.p-t-0 {
+  padding-top: 0;
+}
+
+.p-r-0 {
+  padding-right: 0;
+}
+
+.p-b-0 {
+  padding-bottom: 0;
+}
+
+.p-l-0 {
+  padding-left: 0;
+}
+
+/*-------------------------------------*/
+/*---------------------------------------
+	Margin removers
+---------------------------------------*/
+.m-t-0 {
+  margin-top: 0;
+}
+
+.m-r-0 {
+  margin-right: 0;
+}
+
+.m-b-0 {
+  margin-bottom: 0;
+}
+
+.m-l-0 {
+  margin-left: 0;
+}
+
 /*-------------------------------------*/
 /*---------------------------------------
 	Switch Picture
