--- a/betta-next.css
+++ b/betta-next.css
@@ -1237,7 +1237,7 @@ between lines
 /*---------------------------------------
 	Link Card
 ---------------------------------------*/
-a.card {
+.card {
   position: relative;
   display: inline-block;
   vertical-align: top;
@@ -1251,13 +1251,13 @@ a.card {
   transition: 0.2s;
 }
 
-.dark a.card {
+.dark .card {
   box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.9);
   border-color: #616161;
   background-color: #212121;
 }
 
-a.card .betta_image {
+.card .betta_image {
   width: 25.5rem;
   max-width: 100%;
   border-top-left-radius: 0.25rem;
@@ -1266,11 +1266,11 @@ a.card .betta_image {
   overflow: hidden;
 }
 
-.dark a.card .betta_image {
+.dark .card .betta_image {
   background: #212121;
 }
 
-a.card .betta_image img {
+.card .betta_image img {
   width: 100%;
   border-top-left-radius: 0.25rem;
   border-top-right-radius: 0.25rem;
@@ -1281,21 +1281,21 @@ a.card .betta_image img {
 }
 
 /* Cover card */
-a.card.cover {
+.card.cover {
   margin-bottom: 1rem;
 }
 
-a.card.cover .betta_image img,
-a.card.cover .betta_image {
+.card.cover .betta_image img,
+.card.cover .betta_image {
   border-radius: 0.25rem;
 }
 
-a.card.cover .betta_image img {
+.card.cover .betta_image img {
   aspect-ratio: 3/2;
   object-fit: cover;
 }
 
-a.card.cover .content {
+.card.cover .content {
   position: absolute;
   top: 1rem;
   left: 1rem;
@@ -1305,13 +1305,13 @@ a.card.cover .content {
   transition: 0.2s;
 }
 
-.dark a.card.cover .content {
+.dark .card.cover .content {
   border-color: #212121;
 }
 
-a.card.cover h2,
-a.card.cover h3,
-a.card.cover h4 {
+.card.cover h2,
+.card.cover h3,
+.card.cover h4 {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -1329,9 +1329,9 @@ a.card.cover h4 {
   transition: 0.2s;
 }
 
-.dark a.card.cover h2,
-.dark a.card.cover h3,
-.dark a.card.cover h4 {
+.dark .card.cover h2,
+.dark .card.cover h3,
+.dark .card.cover h4 {
   background: #212121;
 }
 
@@ -1339,31 +1339,31 @@ a.card:active {
   box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.2);
 }
 
-a.card p {
+.card p {
   margin-top: 0.5rem;
   padding: 0 2rem 2rem 2rem;
   text-align: left;
 }
 
-a.card p.small {
+.card p.small {
   margin-top: -2rem;
   padding: 0 2rem;
   text-align: left;
 }
 
-a.card h2,
-a.card h3,
-a.card h4 {
+.card h2,
+.card h3,
+.card h4 {
   margin-left: 2rem;
   margin-right: 2rem;
 }
 
-a.card h2,
-a.card h3,
-a.card h4,
-a.card-double h2,
-a.card-double h3,
-a.card-double h4 {
+.card h2,
+.card h3,
+.card h4,
+.card-double h2,
+.card-double h3,
+.card-double h4 {
   padding: 0 0 1rem 0;
   margin-top: 2.15rem;
   border-bottom: 3px solid #e0e0e0;
@@ -1374,12 +1374,12 @@ a.card-double h4 {
   transition: 0.2s;
 }
 
-.dark a.card h2,
-.dark a.card h3,
-.dark a.card h4,
-.dark a.card-double h2,
-.dark a.card-double h3,
-.dark a.card-double h4 {
+.dark .card h2,
+.dark .card h3,
+.dark .card h4,
+.dark .card-double h2,
+.dark .card-double h3,
+.dark .card-double h4 {
   border-color: #616161;
 }
 
@@ -1423,36 +1423,36 @@ a.card.cover:hover h4 {
   }
 }
 @media (max-width: 800px) {
-  a.card {
+  .card {
     padding: 0;
     margin: 1rem 0 0 0;
   }
 
-  a.card p {
+  .card p {
     margin-top: 0;
     padding: 0 1rem;
     text-align: left;
   }
 
-  a.card h2,
-a.card h3,
-a.card h4 {
+  .card h2,
+.card h3,
+.card h4 {
     margin-left: 1rem;
     margin-right: 1rem;
   }
 
-  a.card h2,
-a.card h3,
-a.card h4,
-a.card-double h2,
-a.card-double h3,
-a.card-double h4 {
+  .card h2,
+.card h3,
+.card h4,
+.card-double h2,
+.card-double h3,
+.card-double h4 {
     margin-top: 1.25rem;
   }
 
-  a.card.cover h2,
-a.card.cover h3,
-a.card.cover h4 {
+  .card.cover h2,
+.card.cover h3,
+.card.cover h4 {
     font-size: 1rem;
     line-height: 1.6rem;
   }
@@ -1461,7 +1461,7 @@ a.card.cover h4 {
 /*---------------------------------------
 	Link Card Double
 ---------------------------------------*/
-a.card-double {
+.card-double {
   display: block;
   width: 55rem;
   max-width: 100%;
@@ -1476,32 +1476,32 @@ a.card-double {
   background-color: #fafafa;
 }
 
-.dark a.card-double {
+.dark .card-double {
   box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.9);
   border-color: #616161;
   background-color: #212121;
 }
 
-a.card-double .betta_image,
-a.card-double .content {
+.card-double .betta_image,
+.card-double .content {
   display: inline-block;
   height: 100%;
   width: 50%;
   vertical-align: top;
 }
 
-a.card-double .betta_image {
+.card-double .betta_image {
   background: #f5f5f5;
 }
-a.card-double .betta_image img {
+.card-double .betta_image img {
   object-fit: cover;
 }
 
-.dark a.card-double .betta_image {
+.dark .card-double .betta_image {
   background: #212121;
 }
 
-a.card-double .betta_image img {
+.card-double .betta_image img {
   height: 27.5rem;
   width: 27.5rem;
   margin-bottom: -3px;
@@ -1509,7 +1509,7 @@ a.card-double .betta_image img {
   transition: 0.2s;
 }
 
-a.card-double .content {
+.card-double .content {
   max-height: 100%;
   padding: 4rem 3rem 0 3rem;
 }
@@ -1524,7 +1524,7 @@ a.card-double:active {
 }
 
 @media (max-width: 800px) {
-  a.card-double {
+  .card-double {
     display: flex;
     flex-direction: column;
     height: auto;
@@ -1532,13 +1532,13 @@ a.card-double:active {
     margin-top: 2rem;
   }
 
-  a.card-double .betta_image img {
+  .card-double .betta_image img {
     height: auto;
     width: 100%;
   }
 
-  a.card-double .betta_image,
-a.card-double .content {
+  .card-double .betta_image,
+.card-double .content {
     height: auto;
     width: 100%;
     display: block;
@@ -1548,7 +1548,7 @@ a.card-double .content {
     order: 1;
   }
 
-  a.card-double .content {
+  .card-double .content {
     order: 2;
     padding: 0 1rem;
   }
