Add experimental classes

--- a/abstracts/_variables.scss
+++ b/abstracts/_variables.scss
@@ -18,6 +18,11 @@ $color-base-8: #424242;
 $color-base-9: #212121;
 $color-base-10: #121212;
 
+$red: #B71C1C;
+$orange: #E65100;
+$blue: #0D47A1;
+
+
 /*---------------------------------------
   Shady stuff
 ---------------------------------------*/
