Update contact styling

--- a/abstracts/_variables.scss
+++ b/abstracts/_variables.scss
@@ -49,6 +49,7 @@ $dark-shadow-level-3: 0 3px 8px 1px rgba(0, 0, 0, 0.9);
   Font sizing
 ---------------------------------------*/
 $font-small: 0.8rem;
+$line-height-small: 1.1rem;
 $line-height: 1.6rem;
 $line-height-half: 0.8rem;
 
