--- a/experimental/alpha.scss
+++ b/experimental/alpha.scss
@@ -96,6 +96,7 @@ strong {
   }
 
   .contact-card {
+    padding: 0 0.75rem;
     border-radius: $radius-3;
     text-align: center;
     box-shadow: $shadow-level-3;
@@ -110,6 +111,10 @@ strong {
 
     .cover {
       padding: 2rem 2rem 0 2rem;
+
+      img {
+        width: 100%;
+      }
     }
 
     .content {
