--- a/components/_menu.scss
+++ b/components/_menu.scss
@@ -200,6 +200,10 @@
     display: inline-block;
     text-align: left;
     margin-bottom: 0rem;
+
+    a {
+      padding: 0.5rem;
+    }
   }
 }
 
