--- a/betta-next.css
+++ b/betta-next.css
@@ -1512,6 +1512,7 @@ a.card-double:active {
   width: 25rem;
   max-width: calc(100% - 1.5rem);
   margin: 1.25rem 0.75rem 0 0.75rem;
+  box-shadow: none;
 }
 .card.contact .picture {
   width: 25rem;
@@ -1528,6 +1529,7 @@ a.card-double:active {
 }
 .card.contact .content p {
   margin: 0;
+  text-align: center;
 }
 .card.contact .close {
   display: none;
