--- a/betta-next.css
+++ b/betta-next.css
@@ -433,11 +433,16 @@ article {
   max-width: 30rem;
   margin: 0 auto;
 }
-
 article.wide {
-  width: 100%;
   max-width: 55rem;
-  margin: 0 auto;
+}
+article.full {
+  max-width: 100%;
+}
+article.cover {
+  width: 100vw;
+  max-width: 100vw;
+  margin: 0 -2rem;
 }
 
 ul {
@@ -499,7 +504,6 @@ picture > img {
 img {
   max-width: 100%;
 }
-
 img.round {
   border-radius: 50%;
 }
@@ -507,17 +511,14 @@ img.round {
 .betta_image > div {
   position: relative;
 }
-
 .betta_image > div img {
   margin-bottom: -3px;
   border-radius: 0;
   image-orientation: none;
 }
-
 .betta_image > div img.round {
   border-radius: 50%;
 }
-
 .betta_image .name {
   position: absolute;
   left: 0;
@@ -532,6 +533,13 @@ img.round {
   -o-transform-origin: right bottom;
   transform: rotate(-90deg);
   transform-origin: left bottom;
+}
+.betta_image.cover {
+  width: 100vw;
+  margin: 0 -2rem;
+}
+.betta_image.full {
+  width: 100%;
 }
 
 /*-------------------------------------*/
