--- a/base/_base.scss
+++ b/base/_base.scss
@@ -104,6 +104,17 @@ article {
   }
 }
 
+div {
+  &.full {
+    width: 100%;
+  }
+
+  &.cover {
+    width: 100vw;
+    margin: 0 -2rem;
+  }
+}
+
 ul {
   margin-top: 1.6rem;
   margin-bottom: 1.6rem;
@@ -1255,6 +1266,21 @@ a.card-double:active {
     width: 25rem;
     max-width: 100%;
     overflow: hidden;
+    position: relative;
+
+    img {
+      margin-bottom: -5px;
+      line-height: 0;
+    }
+  }
+
+  .picture picture.alt {
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    opacity: 0;
   }
 
   .content {
@@ -1327,6 +1353,12 @@ a.card-double:active {
     background: $color-base-1;
   }
 
+  @media (hover: hover) {
+    .picture:hover picture.alt {
+      opacity: 1;
+    }
+  }
+
   @media (max-width: 800px) {
     .phone {
       top: 0.5rem;
@@ -1338,9 +1370,49 @@ a.card-double:active {
       right: -2rem;
     }
   }
+
+  // Rounded contact card
+  &.round {
+    .picture {
+      border-radius: 50%;
+    }
+
+    .content {
+      width: 100%;
+      margin: 0 0 1rem 0;
+      background: none;
+    }
+
+    .email {
+      top: -3rem;
+      right: 1rem;
+    }
+    .phone {
+      top: -3rem;
+      left: 1rem;
+    }
+
+    .phone-number,
+    .email-address {
+      background: $color-white;
+    }
+
+    @media (max-width: 800px) {
+      .phone {
+        left: -1rem;
+      }
+  
+      .email {
+        right: -1rem;
+      }
+    }
+  }
 }
 
+// Dark mode
 .dark .card.contact {
+  background: none;
+
   .content {
     background: $color-base-9;
   }
@@ -1358,7 +1430,6 @@ a.card-double:active {
   }
 
   @media (hover: hover) {
-
     .phone-number:hover+.phone,
     .email-address:hover+.email {
       background-color: $color-base-10;
