--- a/betta-next.css
+++ b/betta-next.css
@@ -445,6 +445,14 @@ article.cover {
   margin: 0 -2rem;
 }
 
+div.full {
+  width: 100%;
+}
+div.cover {
+  width: 100vw;
+  margin: 0 -2rem;
+}
+
 ul {
   margin-top: 1.6rem;
   margin-bottom: 1.6rem;
@@ -1518,6 +1526,19 @@ a.card-double:active {
   width: 25rem;
   max-width: 100%;
   overflow: hidden;
+  position: relative;
+}
+.card.contact .picture img {
+  margin-bottom: -5px;
+  line-height: 0;
+}
+.card.contact .picture picture.alt {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+  opacity: 0;
 }
 .card.contact .content {
   position: relative;
@@ -1580,6 +1601,11 @@ a.card-double:active {
   padding-top: 1.3rem;
   background: #f5f5f5;
 }
+@media (hover: hover) {
+  .card.contact .picture:hover picture.alt {
+    opacity: 1;
+  }
+}
 @media (max-width: 800px) {
   .card.contact .phone {
     top: 0.5rem;
@@ -1590,7 +1616,38 @@ a.card-double:active {
     right: -2rem;
   }
 }
+.card.contact.round .picture {
+  border-radius: 50%;
+}
+.card.contact.round .content {
+  width: 100%;
+  margin: 0 0 1rem 0;
+  background: none;
+}
+.card.contact.round .email {
+  top: -3rem;
+  right: 1rem;
+}
+.card.contact.round .phone {
+  top: -3rem;
+  left: 1rem;
+}
+.card.contact.round .phone-number,
+.card.contact.round .email-address {
+  background: #ffffff;
+}
+@media (max-width: 800px) {
+  .card.contact.round .phone {
+    left: -1rem;
+  }
+  .card.contact.round .email {
+    right: -1rem;
+  }
+}
 
+.dark .card.contact {
+  background: none;
+}
 .dark .card.contact .content {
   background: #212121;
 }
